# miraveja

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml
api/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test_api.py  test_processing_domain.py
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 4be0571e9868_create_members_table_for_storing_extra_.py  821aebd9f19f_initial_migration_test_for_miraveja_.py  9ff1299684b3_create_t_image_metadata_t_generation_.py
api/src/Acquisition/Application/: Commands.py  Handlers.py
api/src/Acquisition/Domain/: Enums.py  Events.py  Interfaces.py  Models.py  Services.py
api/src/Acquisition/Infrastructure/: Dependencies.py  ImageDownloader.py  ImageProvider.py  InternalSevices.py
api/src/Acquisition/Infrastructure/Http/: Controller.py  Routes.py
api/src/Config/: AppConfig.py
api/src/Core/DI/: Container.py
api/src/Core/Events/: Bus.py  base.py  bus.py
api/src/Core/Exceptions/: base.py
api/src/Core/Infrastructure/: Dependencies.py
api/src/Core/Infrastructure/Http/: Controller.py  Routes.py
api/src/Core/Logging/: Logger.py
api/src/Core/Tasks/: Enums.py  TaskManager.py
api/src/Miraveja/: main.py
api/src/Miraveja/Configuration/: Models.py
api/src/Miraveja/Gallery/Application/: FindImageMetadataById.py  FindLoraMetadataByHash.py  GetPresignedPostUrl.py  ListAllImageMetadatas.py  RegisterGenerationMetadata.py  RegisterImageMetadata.py  RegisterLoraMetadata.py  UpdateImageMetadata.py
api/src/Miraveja/Gallery/Domain/: Enums.py  Events.py  Exceptions.py  Interfaces.py  Models.py
api/src/Miraveja/Gallery/Infrastructure/: GalleryDependencies.py
api/src/Miraveja/Member/Application/: FindMemberById.py  ListAllMembers.py  RegisterMember.py
api/src/Miraveja/Member/Domain/: Exceptions.py  Interfaces.py  Models.py
api/src/Miraveja/Member/Infrastructure/: MemberDependencies.py
api/src/Miraveja/Shared/DI/: Exceptions.py  Models.py
api/src/Miraveja/Shared/Errors/: Models.py
api/src/Miraveja/Shared/Identifiers/: Exceptions.py  Models.py
api/src/Miraveja/Shared/Logging/: Exceptions.py  Factories.py  Interfaces.py  Models.py
api/src/Miraveja/Shared/Middlewares/: Models.py
api/src/MiravejaApi/: main.py
api/src/MiravejaApi/Configuration/: Models.py
api/src/MiravejaApi/Connection/Domain/: Models.py
api/src/MiravejaApi/Events/Application/: ConnectStream.py  __init__.py
api/src/MiravejaApi/Events/Infrastructure/: EventsDependencies.py
api/src/MiravejaApi/Gallery/Infrastructure/: GalleryDependencies.py
api/src/MiravejaApi/Member/: __init__.py
api/src/MiravejaApi/Member/Infrastructure/: MemberDependencies.py
api/src/MiravejaApi/Vector/Infrastructure/: VectorDependencies.py
api/src/Processing/Application/: Commands.py  Handlers.py
api/src/Processing/Domain/: Enums.py  Events.py  Interfaces.py  Models.py
api/src/Processing/Infrastructure/: EmbeddingGenerationService.py  InternalServices.py  ThumbnailService.py
api/src/Storage/Application/: Commands.py  Handlers.py
api/src/Storage/Domain/: Enums.py  Events.py  Interfaces.py  Models.py
api/src/Storage/Infrastructure/: Dependencies.py  Encryption.py  Repositories.py
api/src/Storage/Infrastructure/Http/: Controller.py  Routes.py
api/src/Storage/Infrastructure/Migrations/: env.py
api/tests/unit/Acquisition/Domain/: test_models.py
api/tests/unit/Config/: test_app_config.py
api/tests/unit/Core/DI/: test_container.py
api/tests/unit/Core/Events/: test_bus.py
api/tests/unit/MiravejaApi/Configuration/: test_AppConfig.py  test_DatabaseConfig.py  test_KeycloakConfigFactory.py  test_LoggerConfig.py
api/tests/unit/miraveja/Configuration/: test_AppConfig.py  test_DatabaseConfig.py  test_KeycloakConfigFactory.py  test_LoggerConfig.py
core/: README.md  coverage.json  pyproject.toml
core/alembic/versions/: 30ccf79aacdc_add_thumbnailuri_column_to_the_t_image_.py  4be0571e9868_create_members_table_for_storing_extra_.py  5e8b7d47ad31_update_members_table_to_include_new_.py  ced2c201d69d_update_vectorid_column_of_t_image_.py
core/src/MiravejaCore/Gallery/: __init__.py
core/src/MiravejaCore/Gallery/Application/: AddThumbnailToImageMetadata.py  AddVectorIdToImageMetadata.py  FindImageMetadataById.py  FindImageMetadataByVectorId.py  FindLoraMetadataByHash.py  GenerateThumbnail.py  ListAllImageMetadatas.py  RegisterGenerationMetadata.py  RegisterImageMetadata.py  RegisterLoraMetadata.py  UpdateImageMetadata.py
core/src/MiravejaCore/Gallery/Domain/: Configuration.py  Enums.py  Events.py  Exceptions.py  Interfaces.py  Models.py
core/src/MiravejaCore/Gallery/Infrastructure/: GalleryDependencies.py
core/src/MiravejaCore/Member/Application/: ActivateMemberById.py  AddFriendById.py  DeactivateMemberById.py  FindMemberById.py  FollowMemberById.py  ListAllMembers.py  RegisterMember.py  RemoveFriendById.py  UnfollowMemberById.py  UpdateMemberIdentityById.py  UpdateMemberProfileById.py
core/src/MiravejaCore/Member/Domain/: Events.py  Exceptions.py  Interfaces.py  Models.py
core/src/MiravejaCore/Member/Infrastructure/: MemberDependencies.py
core/src/MiravejaCore/Shared/: Configuration.py
core/src/MiravejaCore/Shared/DI/: Exceptions.py  Models.py  __init__.py
core/src/MiravejaCore/Shared/Identifiers/: Models.py
core/src/MiravejaCore/Shared/Logging/: Configuration.py  Factories.py  Interfaces.py  Models.py
core/src/MiravejaCore/Shared/Middlewares/: Models.py
core/src/MiravejaCore/Vector/Application/: FindVectorById.py  GenerateImageVector.py  GenerateTextVector.py  MergeVectorsByIds.py  SearchVectorsByText.py  UpdateVector.py
core/src/MiravejaCore/Vector/Domain/: Enums.py  (+5 more)
core/tests/: __init__.py
core/tests/integration/: __init__.py
core/tests/integration/MiravejaCore/: __init__.py
core/tests/unit/: __init__.py
core/tests/unit/MiravejaCore/: __init__.py
worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
worker/src/MiravejaWorker/: main.py
worker/src/MiravejaWorker/Configuration/: Models.py
worker/src/MiravejaWorker/Shared/: WorkerDependencies.py
(+415 files in other folders)
