[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Miraveja"
version = "0.0.0"
description = "MiraVeja is an AI-powered image gallery designed for exploration, inspiration, and creative workflows."
authors = [
    { name = "Jomar Júnior de Souza Pereira", email = "jomarjunior@poli.ufrj.br" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "boto3 (>=1.40.40,<2.0.0)",                     # for MinIO S3-compatible storage
    "qdrant-client (>=1.15.1,<2.0.0)",              # Qdrant vector database client
    "confluent-kafka (>=2.11.1,<3.0.0)",             # Kafka client
    "alembic (>=1.16.5,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
packages = [
    { include = "Miraveja", from = "src" },
]

[tool.black]
line-length = 120
target-version = ["py310"]
skip-string-normalization = false

[tool.pylint.main]
# Enable basic linting
load-plugins = ["pylint.extensions.mccabe", "pylint.extensions.docparams"]

[tool.pylint.master]
ignore = ["venv", "alembic", "versions", "migrations", "__pycache__", ".eggs", "build", "dist"]
ignore-patterns = "(.)*_test\\.py|test_(.)*\\.py"
module-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
function-naming-style = "PascalCase"
method-naming-style = "PascalCase"
attr-naming-style = "camelCase"
argument-naming-style = "camelCase"
variable-naming-style = "camelCase"
class-attribute-naming-style = "camelCase"
class-const-naming-style = "UPPER_CASE"
inlinevar-naming-style = "camelCase"
good-names = ["src", "main"]

[tool.pylint.messages_control]
disable = [
    "C0114", "C0115", "C0116", "R0917", "W0622", 
    "R0903", "W0718", "R0801"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.typecheck]
ignore-mixin-members = true

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["miraveja"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pylint (>=3.3.8,<4.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
